Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.40.0
-
None
Description
Hit only once in github CI running in ubuntu 24.04 container.
proton main git ref: 813f87eef9e44682948e390b1d20a68ff283bad1
Link to github log:
59: E RuntimeError: Process 7654 (name=HTTP1EventChannel) error: returned error code 66
59: E skrouterd -c HTTP1EventChannel.conf -I /home/runner/work/skupper-router/skupper-router/skupper-router/python
59: E /home/runner/work/skupper-router/skupper-router/skupper-router/build/tests/system_test.dir/tests/system_tests_http1_adaptor/Http1AdaptorEventChannelTest/setUpClass/HTTP1EventChannel-17.cmd
59: E >>>>
59: E ==================
59: E WARNING: ThreadSanitizer: heap-use-after-free (pid=7654)
59: E Write of size 1 at 0x726800030c91 by thread T4 (mutexes: write M0, write M1):
59: E #0 post_event ../c/src/proactor/epoll.c:2349 (libqpid-proton-proactor.so.1+0x137f8) (BuildId: 158eaa565e8d209417b7751d724f3f73f8099121)
59: E #1 poller_do_epoll ../c/src/proactor/epoll.c:2617 (libqpid-proton-proactor.so.1+0x137f8)
59: E #2 next_event_batch ../c/src/proactor/epoll.c:2501 (libqpid-proton-proactor.so.1+0x137f8)
59: E #3 pn_proactor_wait ../c/src/proactor/epoll.c:2740 (libqpid-proton-proactor.so.1+0x16265) (BuildId: 158eaa565e8d209417b7751d724f3f73f8099121)
59: E #4 proactor_thread ../src/server.c:168 (skrouterd+0x130421) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #5 _thread_init ../src/posix/threading.c:207 (skrouterd+0xc8441) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E
59: E Previous write of size 8 at 0x726800030c90 by thread T6:
59: E #0 free ../../../../src/libsanitizer/tsan/tsan_interceptors_posix.cpp:724 (libtsan.so.2+0x5747c) (BuildId: 64c1e8de04b11a7d960abd7e45f94f3b277b7779)
59: E #1 praw_connection_cleanup ../c/src/proactor/epoll_raw_connection.c:171 (libqpid-proton-proactor.so.1+0x8de4) (BuildId: 158eaa565e8d209417b7751d724f3f73f8099121)
59: E #2 praw_connection_cleanup ../c/src/proactor/epoll_raw_connection.c:157 (libqpid-proton-proactor.so.1+0x8de4)
59: E #3 pni_raw_connection_done ../c/src/proactor/epoll_raw_connection.c:496 (libqpid-proton-proactor.so.1+0x174b9) (BuildId: 158eaa565e8d209417b7751d724f3f73f8099121)
59: E #4 pn_proactor_done ../c/src/proactor/epoll.c:2762 (libqpid-proton-proactor.so.1+0x174b9)
59: E #5 proactor_thread ../src/server.c:200 (skrouterd+0x1304d8) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #6 _thread_init ../src/posix/threading.c:207 (skrouterd+0xc8441) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E
59: E Mutex M0 (0x726400030a50) created at:
59: E #0 pthread_mutex_init ../../../../src/libsanitizer/tsan/tsan_interceptors_posix.cpp:1315 (libtsan.so.2+0x58bfd) (BuildId: 64c1e8de04b11a7d960abd7e45f94f3b277b7779)
59: E #1 pmutex_init ../c/src/proactor/epoll-internal.h:336 (libqpid-proton-proactor.so.1+0xcfb3) (BuildId: 158eaa565e8d209417b7751d724f3f73f8099121)
59: E #2 pn_proactor ../c/src/proactor/epoll.c:1991 (libqpid-proton-proactor.so.1+0xcfb3)
59: E #3 qd_server ../src/server.c:219 (skrouterd+0x13b739) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #4 qd_dispatch_prepare ../src/dispatch.c:343 (skrouterd+0xb11cd) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #5 <null> <null> (libffi.so.8+0x7b15) (BuildId: c9149b6e99105aa4321ddd4a10ee4b90de7b7d49)
59: E #6 main_process ../router/src/main.c:101 (skrouterd+0x13c57c) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #7 main ../router/src/main.c:365 (skrouterd+0x333e3) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E
59: E Mutex M1 (0x7264000309c8) created at:
59: E #0 pthread_mutex_init ../../../../src/libsanitizer/tsan/tsan_interceptors_posix.cpp:1315 (libtsan.so.2+0x58bfd) (BuildId: 64c1e8de04b11a7d960abd7e45f94f3b277b7779)
59: E #1 pmutex_init ../c/src/proactor/epoll-internal.h:336 (libqpid-proton-proactor.so.1+0xcf86) (BuildId: 158eaa565e8d209417b7751d724f3f73f8099121)
59: E #2 pn_proactor ../c/src/proactor/epoll.c:1990 (libqpid-proton-proactor.so.1+0xcf86)
59: E #3 qd_server ../src/server.c:219 (skrouterd+0x13b739) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #4 qd_dispatch_prepare ../src/dispatch.c:343 (skrouterd+0xb11cd) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #5 <null> <null> (libffi.so.8+0x7b15) (BuildId: c9149b6e99105aa4321ddd4a10ee4b90de7b7d49)
59: E #6 main_process ../router/src/main.c:101 (skrouterd+0x13c57c) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #7 main ../router/src/main.c:365 (skrouterd+0x333e3) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E
59: E Thread T4 'wrkr_1' (tid=7659, running) created by main thread at:
59: E #0 pthread_create ../../../../src/libsanitizer/tsan/tsan_interceptors_posix.cpp:1022 (libtsan.so.2+0x5a267) (BuildId: 64c1e8de04b11a7d960abd7e45f94f3b277b7779)
59: E #1 sys_thread ../src/posix/threading.c:229 (skrouterd+0xc9a69) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #2 qd_server_run ../src/server.c:298 (skrouterd+0x13bb33) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #3 main_process ../router/src/main.c:111 (skrouterd+0x13c5d0) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #4 main ../router/src/main.c:365 (skrouterd+0x333e3) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E
59: E Thread T6 'wrkr_3' (tid=7661, running) created by main thread at:
59: E #0 pthread_create ../../../../src/libsanitizer/tsan/tsan_interceptors_posix.cpp:1022 (libtsan.so.2+0x5a267) (BuildId: 64c1e8de04b11a7d960abd7e45f94f3b277b7779)
59: E #1 sys_thread ../src/posix/threading.c:229 (skrouterd+0xc9a69) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #2 qd_server_run ../src/server.c:298 (skrouterd+0x13bb33) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #3 main_process ../router/src/main.c:111 (skrouterd+0x13c5d0) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E #4 main ../router/src/main.c:365 (skrouterd+0x333e3) (BuildId: 3a2755d79ab408265526faf0567b497811b59975)
59: E