PROTON-2832: proactor raw connection shutdown race with simultaneous epoll event